--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
             </p>
         </div>
         
-        <div class="button-section">
+<!--         <div class="button-section">
             <a href="#" class="continue-button">Continue</a>
-        </div>
+        </div> -->
         
 
 
